--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "start": "node index.js",
     "dev": "nodemon index.js",
     "test": "echo \"Error: no test specified\" && exit 1",
-    "build:ui": "rm -rf build && cd ../fs-course/part3/phonebook && npm run build --prod && cp -r build ../../../phonebookBackend"
+    "build:ui": "rm -rf build && cd ../fs-course/part3/phonebook && npm run build --prod && cp -r build ../../../phonebookBackend",
+    "lint": "eslint ."
   },
   "author": "",
   "license": "ISC",
@@ -20,6 +21,7 @@
     "morgan": "^1.10.0"
   },
   "devDependencies": {
+    "eslint": "^7.19.0",
     "nodemon": "^2.0.4"
   }
 }
